# internal/server/http.go
@@ -66,6 +66,10 @@ func NewWhiteListMatcher() selector.MatchFunc {
 	whiteList["/api.helloworld.v1.User/Login"] = struct{}{}
 	whiteList["/api.helloworld.v1.User/List"] = struct{}{}
 	whiteList["/api.helloworld.v1.User/Admin"] = struct{}{}
+	whiteList["/api.helloworld.v1.Admin/AdminLogin"] = struct{}{}
+	whiteList["/api.helloworld.v1.Order/ListOrder"] = struct{}{}
+	whiteList["/api.helloworld.v1.Order/ShowOrder"] = struct{}{}
+	whiteList["/api.helloworld.v1.Admin/PointList"] = struct{}{}
 	return func(ctx context.Context, operation string) bool {
 		if _, ok := whiteList[operation]; ok {
 			return false
